# Cauchy_exponential_analysis

./: .gitignore  CMakeLists.txt  LICENSE  README.md  exponential_analysis.cpp  exponential_analysis.hpp  main.cpp  mptypes.hpp  settings.hpp
results_interpretators/: plotter.m
text/: text_formulas_exp_analysis.tex
